[metadata]
name = graph-theory
version = 0.1.0
description = Light-weight, dependency-free data structures & algorithms for teaching and prototyping classic graph-theory concepts.
long_description = file: README.md
long_description_content_type = text/markdown
author = Sean Russell
author_email = seanlawrencerussell@gmail.com
license = MIT
home_page = https://github.com/TurbulentRice/graph-theory
project_urls =
    Documentation = https://github.com/TurbulentRice/graph-theory#readme
    Source = https://github.com/TurbulentRice/graph-theory
    Issues = https://github.com/TurbulentRice/graph-theory/issues

[options]
packages = find:
python_requires = >=3.9
